syntax = "proto3";

option csharp_namespace = "GrpcService.Protos";


service BChainService {
  rpc GetGenesis(EmptyRequest) returns (StringReply);
  rpc LastBlock(EmptyRequest)  returns (StringReply);
  rpc SendCoin(SendRequest)  returns (StringReply);
  rpc Minting(EmptyRequest)  returns (StringReply);
  rpc GetBlocks(EmptyRequest) returns (BlocksResponse);

}

message SearchRequest {
  string query = 1;
  int32 page_number = 2;
  int32 result_per_page = 3; 
}

message SendRequest{
   string sender = 1;
   string recipient = 2;
   float  amount = 3;
   float fee = 4;
}

message BlocksResponse {
  repeated BlockModel blocks = 1;
}

message TrxModel {
	int64 TimeStamp = 1;
	string Sender = 2;
	string Recipient = 3;
	float Amount = 4;
	float Fee = 5;
}

message BlockModel {
	int64 Height = 1;
	int64 TimeStamp = 2;
	string PrevHash = 3;
	string Hash = 4;
	string Transactions = 5;
}

message EmptyRequest {
}

message StringReply {
  string response = 1;
}
